Grid-Layout added

--- a/index.html
+++ b/index.html
@@ -28,11 +28,20 @@
 			<div>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</div>
 		</header>
 
-		<!-- Reliable, efficient delivery
-  Powered by Technology -->
-
-		<!-- Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful -->
+		<main class="grid-container">
+			<div class="team-builder box">
+				<h3 class="title">Team Builder</h3>
+			</div>
+			<div class="supervisor box">
+				<h3 class="title">Supervisor</h3>
+			</div>
+			<div class="calculator box">
+				<h3 class="tilte">Calculator</h3>
+			</div>
+			<div class="karma box">
+				<h3 class="title">Karma</h3>
+			</div>
+		</main>
 
 		<!-- Supervisor
   Monitors activity to identify project roadblocks -->
