--- a/index.html
+++ b/index.html
@@ -31,15 +31,23 @@
 		<main class="grid-container">
 			<div class="team-builder box">
 				<h3 class="title">Team Builder</h3>
+				<p>Scans our talent network to create the optimal team for your project</p>
+				<img class="icon" src="images/icon-team-builder.svg" alt="icon-team-builder" />
 			</div>
 			<div class="supervisor box">
 				<h3 class="title">Supervisor</h3>
+				<p>Monitors activity to identify project roadblocks</p>
+				<img class="icon" src="images/icon-supervisor.svg" alt="icon-supervisor" />
 			</div>
 			<div class="calculator box">
 				<h3 class="tilte">Calculator</h3>
+				<p>Uses data from past projects to provide better delivery estimates</p>
+				<img class="icon" src="images/icon-calculator.svg" alt="icon-calculator" />
 			</div>
 			<div class="karma box">
 				<h3 class="title">Karma</h3>
+				<p>Regularly evaluates our talent to ensure quality</p>
+				<img class="icon" src="images/icon-karma.svg" alt="icon-karma" />
 			</div>
 		</main>
 
