--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<header class="header-text">
 			<h1 class="head-first">Reliable, efficient delivery</h1>
 			<h1 class="head-second">Powered by Technology</h1>
-			<div>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</div>
+			<p class="text">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
 		</header>
 
 		<main class="grid-container">
